--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -7,7 +7,7 @@
 <meta name="description" content="">
 <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
 <meta name="generator" content="Jekyll v3.8.5">
-<title>My Personal Blog</title>
+<title>n2sj Portfolio</title>
 
 <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
 
@@ -36,7 +36,7 @@
   <body>
     <header>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">My Personal Blog</a>
+  <a class="navbar-brand" href="/">n2sj Portfolio</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -52,7 +52,8 @@
 
 <main role="main">
 
-    <h1 class="text-center pt-3">Welcome my personal Blog</h1>
+    <h1 class="text-center pt-3">Welcome to n2sj blog</h1>
+    <hr>
     <div class="container">
     <br />
     <br />
@@ -71,7 +72,7 @@
 
 <footer class="text-muted">
   <div class="container text-center">
-      <p>🄫My Personal {% now "Y" %}</p>
+      <p>🄫n2sj penguin {% now "Y" %}</p>
   </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
