--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -9,7 +8,7 @@
 p> 
 <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
 <meta name="generator" content="Jekyll v3.8.5">
-<title>My Personal Blog</title>
+<title>n2sj Portfolio</title>
 
 <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
 
@@ -38,7 +37,7 @@ p>
 <body>
 <header>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-<a class="navbar-brand" href="#">My Personal Blog</a>
+<a class="navbar-brand" href="#">n2sj Portfolio</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
 </button>
@@ -56,14 +55,14 @@ p>
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1 class="jumbotron-heading">Hi, Welcome to My Personal Page</h1>
+      <h1 class="jumbotron-heading">Welcome to n2sj Django Portfolio Page!</h1>
       <p class="lead text-muted">Hi This is concept proof site for Django!</p>
       <p>
-      <a href="mailto:xxx@xxx.com" class="btn btn-primary my-2">EMail Me</a>
+      <a href="mailto:n2sj@email.com" class="btn btn-primary my-2">EMail Me</a>
         <!-- <a href="#" class="btn btn-primary my-2">Main call to action</a>
         <a href="#" class="btn btn-secondary my-2">Secondary action</a> -->
       </p>
-      <img src="{% static 'micky.png' %}" />
+      <img src="{% static 'lp_main.jpg' %}" />
     </div>
   </section>
 
@@ -89,7 +88,7 @@ p>
 
 <footer class="text-muted">
   <div class="container text-center">
-      <p>🄫My Personal {% now "Y" %}</p>
+      <p>🄫n2sj penguin {% now "Y" %}</p>
   </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
